--- a/_congfig.yml
+++ b/_congfig.yml
@@ -1,7 +1,7 @@
 title: 曾晋哲的Blog
 description: ZJZ's Blog
 baseurl: /ZJZBlog
-wner:
+owner:
   name:           曾晋哲
   avatar:         
   bio:            
