--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type:
-
+deploy: 
+  type: git
+  repo: https://github.com/njzjz/njzjz.github.io
+  branch: gh-pages
