--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-migrator-wordpress": "^1.0.0",
     "hexo-renderer-ejs": "^0.3.1",
