--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: 
+  - 404.html
+  - cv/*.html
 
 # Writing
 new_post_name: :title.md # File name of new posts
