--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -138,7 +138,7 @@ exturl: true
 # External url should start with http:// or https://
 menu:
   home: / || home
-  CV: /CV/ || user
+  CV: /cv/ || user
   Softwares: /softwares/ || server
   #tags: /tags/ || tags
   categories: /categories/ || th
