--- a/_config.yml
+++ b/_config.yml
@@ -83,3 +83,24 @@ deploy:
   type: git
   repo: https://github.com/njzjz/njzjz.github.io
   branch: master
+
+# hexo-neat
+
+neat_enable: true
+
+neat_html:
+  enable: true
+  exclude:
+  
+neat_css:
+  enable: true
+  exclude:
+    - '*.min.css'
+
+neat_js:
+  enable: true
+  mangle: true
+  output:
+  compress:
+  exclude:
+    - '*.min.js'
