--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -350,7 +350,7 @@ related_posts:
 # Dependencies: https://github.com/hexojs/hexo-deployer-git
 post_edit:
   enable: true
-  url: https://github.com/njzjz/njzjz.github.io/tree/hexo/source # Link for view source.
+  url: https://github.com/njzjz/njzjz.github.io/tree/hexo/source/ # Link for view source.
   #url: https://github.com/user-name/repo-name/edit/branch-name/subdirectory-name # Link for fork & edit.
 
 
