--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
-  tab_replace:
+  auto_detect: true
+  tab_replace: true
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
