--- a/source/now.json
+++ b/source/now.json
@@ -21,7 +21,7 @@
         "internshipdiary.njzjz.win",
         "proxy.njzjz.win",
         "learning.njzjz.win",
-        "cv.njzjz.win"",
+        "cv.njzjz.win",
         "navi.njzjz.win"
     ]
 }
