--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ i18n_dir: :lang
 skip_render: 
   - 404.html
   - cv/*.html
+  - redirect/*
 
 # Writing
 new_post_name: :title.md # File name of new posts
