--- a/_config.yml
+++ b/_config.yml
@@ -95,11 +95,13 @@ neat_enable: true
 neat_html:
   enable: true
   exclude:
+    - 'navi/*'
   
 neat_css:
   enable: true
   exclude:
     - '*.min.css'
+    - 'navi/*'
 
 neat_js:
   enable: true
@@ -108,3 +110,4 @@ neat_js:
   compress:
   exclude:
     - '*.min.js'
+    - 'navi/*‘
