--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-generator-tag": "0.2.0",
     "hexo-migrator-wordpress": "1.0.0",
     "hexo-neat": "1.0.4",
+    "hexo-pdf": "^1.1.1",
     "hexo-renderer-ejs": "0.3.1",
     "hexo-renderer-marked": "0.3.2",
     "hexo-renderer-stylus": "0.3.3",
