fix: init the gitalk (#99)
* fix: init the gitalk

* Update _config.yml

* Update _config.yml

* Update _config.yml

* Update _config.yml

* Update next.yml

* Update .travis.yml

--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,11 @@ neat_js:
   exclude:
     - '*.min.js'
 
+#autoissue
+owner: njzjz-bot
+comment_repo: njzjzgitalk
+labels: ["Gitalk"]
+
+sitemap:
+  path: sitemap.xml
+
