fix: use bundlesize

--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "hexo": {
     "version": "3.8.0"
   },
+  "scripts":{
+    "build": "hexo g && bundlesize"
+  },
+  "bundlesize": [
+    {
+      "path": "./public/**/*.*"
+    }
+  ],
   "dependencies": {
     "hexo": "3.8.0",
     "hexo-deployer-git": "1.0.0",
@@ -21,5 +29,8 @@
     "hexo-renderer-marked": "0.3.2",
     "hexo-renderer-stylus": "0.3.3",
     "hexo-server": "0.3.3"
+  },
+  "devDependencies": {
+    "bundlesize": "^0.17.1"
   }
 }
