--- a/now.json
+++ b/now.json
@@ -1,10 +1,10 @@
 {
+    "name": "jinzhe-blog",
     "version": 2,
     "builds": [
         {
             "src": "package.json",
             "use": "@now/static-build"
         }
-    
     ]
 }
