chore: change the order

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "github>njzjz/renovate-config",
-    "config:base"
+    "config:base",
+    "github>njzjz/renovate-config"
   ]
 }
