--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-migrator-wordpress": "1.0.0",
     "hexo-neat": "1.0.4",
     "hexo-pdf": "1.1.1",
+    "hexo-reference": "^1.0.4",
     "hexo-renderer-ejs": "0.3.1",
     "hexo-renderer-marked": "0.3.2",
     "hexo-renderer-stylus": "0.3.3",
