--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "config:base",
-    "github>njzjz/renovate-config"
+    "github>njzjz/renovate-config",
+    "config:base"
   ]
 }
