--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-generator-category": "0.1.3",
     "hexo-generator-feed": "1.2.2",
     "hexo-generator-index": "0.2.1",
+    "hexo-generator-index2": "^0.2.0",
     "hexo-generator-sitemap": "1.2.0",
     "hexo-generator-tag": "0.2.0",
     "hexo-migrator-wordpress": "1.0.0",
