--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ subtitle: 苟利国家生死以，岂因祸福避趋之
 description: Undergraduate, East China Normal University
 keywords: Jinzhe Zeng Blog
 author: Jinzhe Zeng
-language: 
-   - en
-   - zh-CN
+language:
+  - en
+  - zh-CN
 timezone: Asia/Shanghai
 
 # URL
@@ -18,7 +18,7 @@ timezone: Asia/Shanghai
 url: https://njzjz.win
 root: /
 permalink: :year/:month/:day/:title/
-permalink_defaults:
+? permalink_defaults
 
 # Directory
 source_dir: source
@@ -28,7 +28,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: 
+skip_render:
   - 404.html
   - cv/*.html
   - redirect/*
@@ -48,20 +48,20 @@ highlight:
   line_number: true
   auto_detect: true
   tab_replace: true
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: ""
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
-category_map:
-tag_map:
+? category_map
+? tag_map
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -82,7 +82,7 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy: 
+deploy:
   type: git
   repo: https://github.com/njzjz/njzjz.github.io
   branch: master
@@ -93,20 +93,20 @@ neat_enable: true
 
 neat_html:
   enable: true
-  exclude:
-  
+  ? exclude
+
 neat_css:
   enable: true
   exclude:
-    - '*.min.css'
+    - "*.min.css"
 
 neat_js:
   enable: true
   mangle: true
-  output:
-  compress:
+  ? output
+  ? compress
   exclude:
-    - '*.min.js'
+    - "*.min.js"
 
 #autoissue
 owner: njzjz-bot
@@ -117,13 +117,13 @@ sitemap:
   path: sitemap.xml
 
 index2_generator:
-  - layout: 'archive'
-    path: 'archives'
+  - layout: "archive"
+    path: "archives"
     exclude:
       - category ECNUChemistry
       - category Internship
-  - layout: 'index'
-    path: ''
+  - layout: "index"
+    path: ""
     index: true
     exclude:
       - category ECNUChemistry
