--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://njzjz.win
 root: /
-permalink: :lang/:title/
+permalink: :year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
