--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "hexo-renderer-marked": "0.3.2",
     "hexo-renderer-stylus": "0.3.3",
     "hexo-server": "0.3.3",
-    "hexo-theme-next": "git+https://github.com/theme-next/hexo-theme-next.git"
+    "hexo-theme-next": "theme-next/hexo-theme-next"
   },
   "devDependencies": {
     "bundlesize": "0.17.1",
