update minify settings

--- a/_config.yml
+++ b/_config.yml
@@ -86,27 +86,7 @@ deploy:
   type: git
   repo: https://github.com/njzjz/njzjz.github.io
   branch: master
-
-# hexo-neat
-
-neat_enable: true
-
-neat_html:
-  enable: true
-  exclude:
-  
-neat_css:
-  enable: true
-  exclude:
-    - '*.min.css'
-
-neat_js:
-  enable: false
-  mangle: true
-  output:
-  compress:
-  exclude:
-    - '*.min.js'
+all_minifier: true
 
 #autoissue
 owner: njzjz-bot
