fix: revert timezone

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author: Jinzhe Zeng
 language: 
    - en
    - zh-CN
-timezone: America/New_York
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
