add related posts

--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -37,8 +37,8 @@ wechat_subscriber:
 reward:
   wechatpay: https://i.loli.net/2018/08/26/5b821ce3a2497.jpg
   alipay: https://i.loli.net/2018/08/26/5b821c8f752b4.png
-#related_posts:
-#   enable: true
+related_posts:
+   enable: true
 post_edit:
   enable: true
   url: https://github.com/njzjz/njzjz.github.io/tree/hexo/source/ # Link for view source.
