--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hexo-migrator-wordpress": "1.0.0",
     "hexo-pdf": "1.1.1",
     "hexo-reference": "1.0.4",
+    "hexo-related-popular-posts": "^3.0.6",
     "hexo-renderer-ejs": "1.0.0",
     "hexo-renderer-marked": "2.0.0",
     "hexo-renderer-stylus": "1.1.0",
