--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,10 @@ index2_generator:
     exclude:
       - category ECNUChemistry
       - category Internship
+
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: true
+  exclude_codeblock: false
