--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hexo-renderer-marked": "2.0.0",
     "hexo-renderer-stylus": "1.1.0",
     "hexo-server": "1.0.0",
+    "hexo-symbols-count-time": "^0.6.3",
     "hexo-theme-next": "theme-next/hexo-theme-next"
   },
   "devDependencies": {
