fix: add search function

--- a/_config.yml
+++ b/_config.yml
@@ -115,3 +115,8 @@ symbols_count_time:
   total_symbols: true
   total_time: true
   exclude_codeblock: false
+
+search:
+  path: search.xml
+  field: post
+  content: true
