--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-generator-feed": "2.0.0",
     "hexo-generator-index": "1.0.0",
     "hexo-generator-index2": "0.2.0",
+    "hexo-generator-search": "^2.4.0",
     "hexo-generator-sitemap": "1.2.0",
     "hexo-generator-tag": "1.0.0",
     "hexo-migrator-wordpress": "1.0.0",
