--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,6 +10,15 @@ jobs:
       with:
         node-version: 12
     - run: npm install -g yarn
+    - name: Get yarn cache
+      id: yarn-cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - uses: actions/cache@v1
+      with:
+        path: ${{ steps.yarn-cache.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     - run: yarn install
     - run: yarn build
       env:
