fix: fix actions typo

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -26,8 +26,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       if: github.ref == 'refs/heads/hexo'
-      env:
+      with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BASE_BRANCH: hexo
         BRANCH: master
         FOLDER: public
