fix: add BASE_BRANCH

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,3 +30,4 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: master
         FOLDER: public
+        BASE_BRANCH: hexo	
