--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.8.0"
   },
   "scripts": {
-    "build": "cpx \"node_modules/hexo-theme-next/**/*\" themes/next && hexo g && bundlesize",
+    "build": "hexo g && bundlesize",
     "now-build": "yarn build && mv public dist"
   },
   "bundlesize": [
@@ -16,7 +16,6 @@
   ],
   "dependencies": {
     "hexo": "4.0.0",
-    "hexo-deployer-git": "2.1.0",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-basic-set": "0.1.1",
     "hexo-generator-category": "1.0.0",
@@ -39,7 +38,6 @@
   },
   "devDependencies": {
     "bundlesize": "0.18.0",
-    "cpx": "1.5.0",
     "hexo-all-minifier": "0.5.3"
   }
 }
