--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "bundlesize": "0.18.0",
     "cpx": "1.5.0",
     "hexo-all-minifier": "0.5.3"
+  },
+  "engines": {
+    "node": ">=10.x"
   }
 }
